feat: IR refactoring